add preview on site