@@ -83,7 +83,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.6.2</version>
+
+                <configuration>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                </configuration>
+
             </plugin>
+
         </plugins>
     </reporting>
 
